--- a/src/main/resources/static/PastAndPendingOrders.html
+++ b/src/main/resources/static/PastAndPendingOrders.html
@@ -8,15 +8,18 @@
 <body>
 
 <div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <a href="PastAndPendingOrders.html">Past and Pending Orders</a>
+    <a href="index.html">Home</a>
+    <a class="active" href="PastAndPendingOrders.html">Past and Pending Orders</a>
     <a href="Cart.html">Cart</a>
     <a class="logout" href="">Log Out</a>
 </div>
 
 <div style="padding-left:16px">
-    <h2>Home page</h2>
-    <p>content about order options</p>
+
+    <h2>Past and Pending Orders</h2>
+    <p>Get pending orders from database and display here</p>
+
+    <p>Get past orders from database and display here</p>
 </div>
 
 </body>
